# shoutout-bot

./: Cargo.toml
src/: main.rs  shoutout.rs  utils.rs
