[package]
name = "shoutout-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.15.0"
anyhow = "1.0.71"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.15.0"
shuttle-serenity = "0.15.0"
tokio = "1.28.0"
tracing = "0.1.37"
time = { version = "0.3.20", features = ["formatting"] }
shuttle-shared-db = { version = "0.15.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "time"] }

